objects/Account/fields/Akce_pro_zamestnance__c.field-meta.xml
<CustomField>
    <fullName>Akce_pro_zamestnance__c</fullName>
    <label>Akce pro zaměstnance</label>
    <type>TextArea</type>
</CustomField>