objects/Account/fields/Charakteristika__c.field-meta.xml
<CustomField>
    <fullName>Charakteristika__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>doplňující informace o firmě</description>
    <label>Účet</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Účty</relationshipLabel>
    <relationshipName>ty</relationshipName>
    <type>Lookup</type>
</CustomField>