objects/Account/fields/Cislo_uctu__c.field-meta.xml
<CustomField>
    <fullName>Cislo_uctu__c</fullName>
    <label>Číslo účtu</label>
    <length>18</length>
    <type>Text</type>
</CustomField>