objects/Account/fields/Darce__c.field-meta.xml
<CustomField>
    <fullName>Darce__c</fullName>
    <formula>IF ( Pocet_aktivnich_darcovskych_smluv__c  &gt; 0, &quot;Ano&quot;, &quot;Ne&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dárce</label>
    <type>Text</type>
</CustomField>