objects/Account/fields/Datum_vytvoreni__c.field-meta.xml
<CustomField>
    <fullName>Datum_vytvoreni__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Datum vytvoření</label>
    <type>Date</type>
</CustomField>