objects/Account/fields/DIC__c.field-meta.xml
<CustomField>
    <fullName>DIC__c</fullName>
    <externalId>true</externalId>
    <label>DIČ</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>