objects/Account/fields/Dlouhy_nazev__c.field-meta.xml
<CustomField>
    <fullName>Dlouhy_nazev__c</fullName>
    <label>Dlouhý název</label>
    <length>255</length>
    <type>Text</type>
</CustomField>