objects/Account/fields/Dopad_media__c.field-meta.xml
<CustomField>
    <fullName>Dopad_media__c</fullName>
    <label>Dopad média</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Brno</fullName>
            </value>
            <value>
                <fullName>Celostátní</fullName>
            </value>
            <value>
                <fullName>Jihočeský</fullName>
            </value>
            <value>
                <fullName>Jihomoravský</fullName>
            </value>
            <value>
                <fullName>Karlovarský</fullName>
            </value>
            <value>
                <fullName>Královéhradecký</fullName>
            </value>
            <value>
                <fullName>Liberecký</fullName>
            </value>
            <value>
                <fullName>Moravskoslezský</fullName>
            </value>
            <value>
                <fullName>Olomoucký</fullName>
            </value>
            <value>
                <fullName>Pardubický</fullName>
            </value>
            <value>
                <fullName>Plzeňský</fullName>
            </value>
            <value>
                <fullName>Praha (město)</fullName>
                <label>Praha</label>
            </value>
            <value>
                <fullName>Regionální</fullName>
            </value>
            <value>
                <fullName>Regionální/Celostátní</fullName>
            </value>
            <value>
                <fullName>Severní Čechy</fullName>
            </value>
            <value>
                <fullName>Středočeský</fullName>
            </value>
            <value>
                <fullName>Ústecký</fullName>
            </value>
            <value>
                <fullName>Vysočina</fullName>
            </value>
            <value>
                <fullName>Zahraniční</fullName>
            </value>
            <value>
                <fullName>Zlínský</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>