objects/Account/fields/Fiskalni_rok__c.field-meta.xml
<CustomField>
    <fullName>Fiskalni_rok__c</fullName>
    <label>Fiskální rok</label>
    <type>Date</type>
</CustomField>