objects/Account/fields/Fyzicka_velikost__c.field-meta.xml
<CustomField>
    <fullName>Fyzicka_velikost__c</fullName>
    <label>Fyzická velikost</label>
    <type>TextArea</type>
</CustomField>