objects/Account/fields/GPS_pozice__c.field-meta.xml
<CustomField>
    <fullName>GPS_pozice__c</fullName>
    <label>GPS pozice</label>
    <length>40</length>
    <type>Text</type>
</CustomField>