objects/Account/fields/IC__c.field-meta.xml
<CustomField>
    <fullName>IC__c</fullName>
    <label>IČ</label>
    <length>16</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>