objects/Account/fields/Interni_enviromentalni_programy__c.field-meta.xml
<CustomField>
    <fullName>Interni_enviromentalni_programy__c</fullName>
    <label>Interní enviromentální programy</label>
    <type>TextArea</type>
</CustomField>