objects/Account/fields/Media_zamereni__c.field-meta.xml
<CustomField>
    <fullName>Media_zamereni__c</fullName>
    <description>Oblast nebo cílová skupina</description>
    <inlineHelpText>Oblast nebo cílová skupina</inlineHelpText>
    <label>Zaměření</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Architektura, stavitelství</fullName>
            </value>
            <value>
                <fullName>Bulvár</fullName>
            </value>
            <value>
                <fullName>Cyklistické</fullName>
            </value>
            <value>
                <fullName>Doprava</fullName>
            </value>
            <value>
                <fullName>Ekologické</fullName>
            </value>
            <value>
                <fullName>Ekonomické</fullName>
            </value>
            <value>
                <fullName>Foto</fullName>
            </value>
            <value>
                <fullName>Gastro</fullName>
            </value>
            <value>
                <fullName>Hobby</fullName>
            </value>
            <value>
                <fullName>Hospodářství</fullName>
            </value>
            <value>
                <fullName>Instituce</fullName>
            </value>
            <value>
                <fullName>Kultura</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Pedagogické</fullName>
            </value>
            <value>
                <fullName>Příroda</fullName>
            </value>
            <value>
                <fullName>Mužské</fullName>
                <label>Pro muže</label>
            </value>
            <value>
                <fullName>Pro ženy</fullName>
            </value>
            <value>
                <fullName>Regionální</fullName>
            </value>
            <value>
                <fullName>Společenské</fullName>
            </value>
            <value>
                <fullName>Turistické / Cestování</fullName>
            </value>
            <value>
                <fullName>Veřejná správa</fullName>
            </value>
            <value>
                <fullName>Veřejné prostory</fullName>
            </value>
            <value>
                <fullName>Vinařské</fullName>
            </value>
            <value>
                <fullName>Zahraniční zajímavosti</fullName>
            </value>
            <value>
                <fullName>Zěměpis, cestopis</fullName>
            </value>
            <value>
                <fullName>Zpravodajství</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>