objects/Account/fields/Nezajem_o_spolupraci__c.field-meta.xml
<CustomField>
    <fullName>Nezajem_o_spolupraci__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Pole vyjadřuje vztah firmy k Nadaci Partnerství (tedy, zda firmu oslovujeme, nebo s ní již spolupracujeme či jsme spolupráci již ukončili.)</inlineHelpText>
    <label>Nezájem o spolupráci</label>
    <type>Checkbox</type>
</CustomField>