objects/Account/fields/Obecny_email_2__c.field-meta.xml
<CustomField>
    <fullName>Obecny_email_2__c</fullName>
    <label>Obecný email 2</label>
    <type>Email</type>
</CustomField>