objects/Account/fields/Obecny_email__c.field-meta.xml
<CustomField>
    <fullName>Obecny_email__c</fullName>
    <label>Obecný email</label>
    <type>Email</type>
</CustomField>