objects/Account/fields/Obrat__c.field-meta.xml
<CustomField>
    <fullName>Obrat__c</fullName>
    <label>Obrat</label>
    <length>16</length>
    <type>Text</type>
</CustomField>