objects/Account/fields/Okres__c.field-meta.xml
<CustomField>
    <fullName>Okres__c</fullName>
    <label>Okres</label>
    <length>30</length>
    <type>Text</type>
</CustomField>