objects/Account/fields/Organ_verejne_spravy__c.field-meta.xml
<CustomField>
    <fullName>Organ_verejne_spravy__c</fullName>
    <label>Orgán veřejné správy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Krajský úřad</fullName>
            </value>
            <value>
                <fullName>Magistrát města</fullName>
            </value>
            <value>
                <fullName>Městský úřad</fullName>
            </value>
            <value>
                <fullName>Městys</fullName>
            </value>
            <value>
                <fullName>Mikroregion</fullName>
            </value>
            <value>
                <fullName>Ministerstvo</fullName>
            </value>
            <value>
                <fullName>Národní parky a CHKO</fullName>
            </value>
            <value>
                <fullName>Obecní úřad</fullName>
            </value>
            <value>
                <fullName>Ostatní veřejná správa</fullName>
            </value>
            <value>
                <fullName>Příspěvková organizace</fullName>
            </value>
            <value>
                <fullName>Úřad městské části</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>