objects/Account/fields/ORP__c.field-meta.xml
<CustomField>
    <fullName>ORP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ORP</label>
    <type>Checkbox</type>
</CustomField>