objects/Account/fields/Partneri__c.field-meta.xml
<CustomField>
    <fullName>Partneri__c</fullName>
    <label>Partneři</label>
    <type>TextArea</type>
</CustomField>