objects/Account/fields/Partnerstvi_na_MVS__c.field-meta.xml
<CustomField>
    <fullName>Partnerstvi_na_MVS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partnerství na MVS</label>
    <type>Checkbox</type>
</CustomField>