objects/Account/fields/Partnerstvi_na_MVS_od__c.field-meta.xml
<CustomField>
    <fullName>Partnerstvi_na_MVS_od__c</fullName>
    <description>Od kdy je obec zapojena do partnerství na projektu MVS</description>
    <label>Partnerství na MVS od</label>
    <type>Date</type>
</CustomField>