objects/Account/fields/Pocet_aktivnich_darcovskych_smluv__c.field-meta.xml
<CustomField>
    <fullName>Pocet_aktivnich_darcovskych_smluv__c</fullName>
    <label>Počet aktivních dárcovských smluv</label>
    <summarizedField>Ucast__c.Pocet_smluv_darovaci__c</summarizedField>
    <summaryForeignKey>Ucast__c.Ucet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>