objects/Account/fields/Pocet_obyvatel__c.field-meta.xml
<CustomField>
    <fullName>Pocet_obyvatel__c</fullName>
    <label>Počet obyvatel</label>
    <length>10</length>
    <type>Text</type>
</CustomField>