objects/Account/fields/Pocet_zamestnancu__c.field-meta.xml
<CustomField>
    <fullName>Pocet_zamestnancu__c</fullName>
    <label>Počet zaměstnanců</label>
    <length>10</length>
    <type>Text</type>
</CustomField>