objects/Account/fields/Posledn_kol_email__c.field-meta.xml
<CustomField>
    <fullName>Posledn_kol_email__c</fullName>
    <formula>LastActivityDate</formula>
    <label>Poslední činnost (email)</label>
    <type>Date</type>
</CustomField>