objects/Account/fields/Posledni_ucast__c.field-meta.xml
<CustomField>
    <fullName>Posledni_ucast__c</fullName>
    <label>Poslední účast</label>
    <summarizedField>Ucast__c.CreatedDate</summarizedField>
    <summaryForeignKey>Ucast__c.Ucet__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>