objects/Account/fields/Pravni_forma_podnikani__c.field-meta.xml
<CustomField>
    <fullName>Pravni_forma_podnikani__c</fullName>
    <label>Právní forma podnikání</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a.s.</fullName>
            </value>
            <value>
                <fullName>s.r.o.</fullName>
            </value>
            <value>
                <fullName>vos</fullName>
            </value>
            <value>
                <fullName>ks</fullName>
            </value>
            <value>
                <fullName>družstvo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>