objects/Account/fields/Pravomoci__c.field-meta.xml
<CustomField>
    <fullName>Pravomoci__c</fullName>
    <label>Pravomoci</label>
    <type>TextArea</type>
</CustomField>