objects/Account/fields/REDIZO__c.field-meta.xml
<CustomField>
    <fullName>REDIZO__c</fullName>
    <externalId>true</externalId>
    <label>REDIZO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>