objects/Account/fields/Rok_zalozeni__c.field-meta.xml
<CustomField>
    <fullName>Rok_zalozeni__c</fullName>
    <label>Rok založení</label>
    <length>10</length>
    <type>Text</type>
</CustomField>