objects/Account/fields/skolici_kurzy__c.field-meta.xml
<CustomField>
    <fullName>skolici_kurzy__c</fullName>
    <label>Školící kurzy</label>
    <type>TextArea</type>
</CustomField>