objects/Account/fields/Smazat__c.field-meta.xml
<CustomField>
    <fullName>Smazat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Smazat</label>
    <type>Checkbox</type>
</CustomField>