objects/Account/fields/status_aggregator_callback__c.field-meta.xml
<CustomField>
    <fullName>status_aggregator_callback__c</fullName>
    <label>_status_aggregator_callback</label>
    <summarizedField>Ucast__c.status_aggregator__c</summarizedField>
    <summaryForeignKey>Ucast__c.Ucet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>