objects/Account/fields/Stav__c.field-meta.xml
<CustomField>
    <fullName>Stav__c</fullName>
    <formula>IF (status_aggregator_callback__c &gt;= 1000000, &quot;Aktivní&quot;,
IF (status_aggregator_callback__c &gt;= 10000, &quot;Neaktivní&quot;,
IF (status_aggregator_callback__c &gt;= 100, &quot;Příležitost&quot;,
IF (status_aggregator_callback__c &gt;= 1, 

IF ( Nezajem_o_spolupraci__c, &quot;Ukončena spolupráce&quot;, &quot;Neaktivní&quot; )

,

IF ( Nezajem_o_spolupraci__c, &quot;Ukončena spolupráce&quot;, &quot;Příležitost&quot; )

))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stav</label>
    <type>Text</type>
</CustomField>