objects/Account/fields/Stav_d_rce__c.field-meta.xml
<CustomField>
    <fullName>Stav_d_rce__c</fullName>
    <inlineHelpText>Informace, zda je firma dárce, případně potenciální dárce</inlineHelpText>
    <label>Stav dárce</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dárce</fullName>
            </value>
            <value>
                <fullName>Potenciální dárce</fullName>
            </value>
            <value>
                <fullName>Nechce darovat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>