objects/Account/fields/Typ_media__c.field-meta.xml
<CustomField>
    <fullName>Typ_media__c</fullName>
    <label>Typ média</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agentura</fullName>
            </value>
            <value>
                <fullName>Čtrnáctideník</fullName>
            </value>
            <value>
                <fullName>Dvouměsíčník</fullName>
            </value>
            <value>
                <fullName>Měsíčník</fullName>
            </value>
            <value>
                <fullName>Neznámý</fullName>
            </value>
            <value>
                <fullName>Organizace</fullName>
            </value>
            <value>
                <fullName>Rozhlas</fullName>
            </value>
            <value>
                <fullName>Tisk</fullName>
            </value>
            <value>
                <fullName>Tisk 10x ročně</fullName>
            </value>
            <value>
                <fullName>Tisk 14deníky</fullName>
            </value>
            <value>
                <fullName>Tisk 2měsíčníky</fullName>
            </value>
            <value>
                <fullName>Tisk 2x týdně</fullName>
            </value>
            <value>
                <fullName>Tisk deníky</fullName>
            </value>
            <value>
                <fullName>Tisk měsíčníky</fullName>
            </value>
            <value>
                <fullName>Tisk týdeníky</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Týdeník</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Zpravodaje městských částí</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>