objects/Account/fields/Typ_organizace__c.field-meta.xml
<CustomField>
    <fullName>Typ_organizace__c</fullName>
    <label>Typ organizace</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nadace</fullName>
            </value>
            <value>
                <fullName>Nadační fond</fullName>
            </value>
            <value>
                <fullName>Občanské sdružení - org.složka s práv.subj.</fullName>
            </value>
            <value>
                <fullName>Občanské sdružení samostatné</fullName>
            </value>
            <value>
                <fullName>Obecně prospěšná společnost</fullName>
            </value>
            <value>
                <fullName>Spolek</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>