objects/Account/fields/Typ_vzdelavaci_instituce__c.field-meta.xml
<CustomField>
    <fullName>Typ_vzdelavaci_instituce__c</fullName>
    <label>Typ vzdělávací instituce</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Čtyřleté gymnázium</fullName>
            </value>
            <value>
                <fullName>Dětský domov</fullName>
            </value>
            <value>
                <fullName>Gymnázium</fullName>
            </value>
            <value>
                <fullName>Jiné</fullName>
            </value>
            <value>
                <fullName>Konzervatoř</fullName>
            </value>
            <value>
                <fullName>Mateřská škola</fullName>
            </value>
            <value>
                <fullName>Obchodní akademie</fullName>
            </value>
            <value>
                <fullName>Osmileté gymnázium</fullName>
            </value>
            <value>
                <fullName>Šestileté gymnázium</fullName>
            </value>
            <value>
                <fullName>Střední odborná škola</fullName>
            </value>
            <value>
                <fullName>Střední škola</fullName>
            </value>
            <value>
                <fullName>Vysoká škola</fullName>
            </value>
            <value>
                <fullName>Vyšší odborná škola</fullName>
            </value>
            <value>
                <fullName>Základní škola</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>