objects/Account/fields/Ucast_na_CV__c.field-meta.xml
<CustomField>
    <fullName>Ucast_na_CV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Účast na CV</label>
    <type>Checkbox</type>
</CustomField>