objects/Account/fields/Velikost_budgetu_pro__c.field-meta.xml
<CustomField>
    <fullName>Velikost_budgetu_pro__c</fullName>
    <label>Velikost budgetu pro</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Teambuilding</fullName>
            </value>
            <value>
                <fullName>Školení</fullName>
            </value>
            <value>
                <fullName>Rodinný den</fullName>
            </value>
            <value>
                <fullName>Zahradní party</fullName>
            </value>
            <value>
                <fullName>Enviro programy</fullName>
            </value>
            <value>
                <fullName>Dobrovolnictví</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>