objects/Account/fields/VIP_partner__c.field-meta.xml
<CustomField>
    <fullName>VIP_partner__c</fullName>
    <formula>IF (  Darce__c = &quot;Ano&quot; &amp;&amp;  Stav__c = &quot;Aktivní&quot;, &quot;Ano&quot;,
IF ( $RecordType.Name = &quot;Ambasáda&quot; , &quot;Ano&quot;,

&quot;Ne&quot;
 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP partner</label>
    <type>Text</type>
</CustomField>