objects/Account/fields/Vydavatelstvi__c.field-meta.xml
<CustomField>
    <fullName>Vydavatelstvi__c</fullName>
    <label>Vydavatelství</label>
    <length>60</length>
    <type>Text</type>
</CustomField>