objects/Account/fields/vzdalenost_od_oz_cas__c.field-meta.xml
<CustomField>
    <fullName>vzdalenost_od_oz_cas__c</fullName>
    <label>Vzdálenost od OZ v minutách</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>