objects/Account/fields/Zahranicni__c.field-meta.xml
<CustomField>
    <fullName>Zahranicni__c</fullName>
    <formula>IF ( ShippingCountry != &quot;&quot; &amp;&amp; ShippingCountry != &quot;CZ&quot;  &amp;&amp; ShippingCountry != &quot;ČR&quot;   &amp;&amp; ShippingCountry != &quot;Česko&quot;    &amp;&amp; ShippingCountry != &quot;Česká Republika&quot; &amp;&amp; ShippingCountry != &quot;Česká republika&quot; , &quot;Ano&quot;, &quot;Ne&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zahraniční</label>
    <type>Text</type>
</CustomField>