objects/Account/fields/Zamereni_skoly__c.field-meta.xml
<CustomField>
    <fullName>Zamereni_skoly__c</fullName>
    <label>Zaměření školy</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ekonomické</fullName>
            </value>
            <value>
                <fullName>gastro</fullName>
            </value>
            <value>
                <fullName>hotelové</fullName>
            </value>
            <value>
                <fullName>humanitní</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>jazykové</fullName>
            </value>
            <value>
                <fullName>jiné</fullName>
            </value>
            <value>
                <fullName>pedagogické</fullName>
            </value>
            <value>
                <fullName>podnikatelské</fullName>
            </value>
            <value>
                <fullName>přírodovědné</fullName>
            </value>
            <value>
                <fullName>průmyslové</fullName>
            </value>
            <value>
                <fullName>řemeslné</fullName>
            </value>
            <value>
                <fullName>speciální</fullName>
            </value>
            <value>
                <fullName>stavební</fullName>
            </value>
            <value>
                <fullName>technické</fullName>
            </value>
            <value>
                <fullName>umělecké</fullName>
            </value>
            <value>
                <fullName>všeobecné</fullName>
            </value>
            <value>
                <fullName>zahradnické</fullName>
            </value>
            <value>
                <fullName>zdravotnické</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>