objects/Account/fields/Zapojen_do_programu__c.field-meta.xml
<CustomField>
    <fullName>Zapojen_do_programu__c</fullName>
    <label>Zapojení do programu</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nadace Partnerství</fullName>
            </value>
            <value>
                <fullName>Sázíme budoucnost</fullName>
            </value>
            <value>
                <fullName>Otevřená zahrada</fullName>
            </value>
            <value>
                <fullName>Cena Josefa Vavrouška</fullName>
            </value>
            <value>
                <fullName>re-Generátor</fullName>
            </value>
            <value>
                <fullName>Živá půda</fullName>
            </value>
            <value>
                <fullName>Dražba 30 let NAP</fullName>
            </value>
            <value>
                <fullName>Výsadbové granty</fullName>
            </value>
            <value>
                <fullName>Zelené stavění</fullName>
            </value>
            <value>
                <fullName>Adaptační strategie</fullName>
            </value>
            <value>
                <fullName>Sčítače</fullName>
            </value>
            <value>
                <fullName>Moravské vinařské stezky</fullName>
            </value>
            <value>
                <fullName>Greenways</fullName>
            </value>
            <value>
                <fullName>Zelené oázy</fullName>
            </value>
            <value>
                <fullName>Rádce pro vlastníky půdy</fullName>
            </value>
            <value>
                <fullName>Labská stezka</fullName>
            </value>
            <value>
                <fullName>Koalice pro zdravou krajinu</fullName>
            </value>
            <value>
                <fullName>Adapterra Awards</fullName>
            </value>
            <value>
                <fullName>Life Tree Check</fullName>
            </value>
            <value>
                <fullName>Strom roku</fullName>
            </value>
            <value>
                <fullName>Potenciální spolupráce</fullName>
            </value>
            <value>
                <fullName>Grantys</fullName>
            </value>
            <value>
                <fullName>Obnova Moravy</fullName>
            </value>
            <value>
                <fullName>ETY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>