objects/Account/fields/Zdroj__c.field-meta.xml
<CustomField>
    <fullName>Zdroj__c</fullName>
    <label>Zdroj</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Akce</fullName>
            </value>
            <value>
                <fullName>Doporučení od známého</fullName>
            </value>
            <value>
                <fullName>Historický kontakt</fullName>
            </value>
            <value>
                <fullName>Koupená databáze</fullName>
            </value>
            <value>
                <fullName>Newsletter</fullName>
            </value>
            <value>
                <fullName>Osobní kontakt</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
            <value>
                <fullName>Reference zákazníka nebo partnera</fullName>
            </value>
            <value>
                <fullName>Reklama</fullName>
            </value>
            <value>
                <fullName>Seminář, konference</fullName>
            </value>
            <value>
                <fullName>Sociální sítě</fullName>
            </value>
            <value>
                <fullName>Veletrh</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Zaměstnanec</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>