objects/Account/fields/Zkusenosti__c.field-meta.xml
<CustomField>
    <fullName>Zkusenosti__c</fullName>
    <label>Zkušenosti</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>