objects/Account/recordTypes/Ambasada.recordType-meta.xml
<RecordType>
    <fullName>Ambasada</fullName>
    <active>true</active>
    <label>Ambasáda</label>
</RecordType>