objects/Account/recordTypes/Cirkev.recordType-meta.xml
<RecordType>
    <fullName>Cirkev</fullName>
    <active>true</active>
    <label>Církev</label>
</RecordType>