objects/Account/recordTypes/Firma.recordType-meta.xml
<RecordType>
    <fullName>Firma</fullName>
    <active>true</active>
    <label>Firma</label>
</RecordType>