objects/Account/recordTypes/Fyzicka_osoba.recordType-meta.xml
<RecordType>
    <fullName>Fyzicka_osoba</fullName>
    <active>true</active>
    <label>Fyzická osoba</label>
</RecordType>