objects/Account/recordTypes/Informacni_centrum.recordType-meta.xml
<RecordType>
    <fullName>Informacni_centrum</fullName>
    <active>true</active>
    <label>Informační centrum</label>
</RecordType>