objects/Account/recordTypes/Media.recordType-meta.xml
<RecordType>
    <fullName>Media</fullName>
    <active>true</active>
    <label>Média</label>
</RecordType>