objects/Account/recordTypes/Nadnarodni_organizace.recordType-meta.xml
<RecordType>
    <fullName>Nadnarodni_organizace</fullName>
    <active>true</active>
    <label>Nadnárodní organizace</label>
</RecordType>