objects/Account/recordTypes/Neziskova_organizace.recordType-meta.xml
<RecordType>
    <fullName>Neziskova_organizace</fullName>
    <active>true</active>
    <label>Nezisková organizace</label>
</RecordType>