objects/Account/recordTypes/Sdruzeni_obci.recordType-meta.xml
<RecordType>
    <fullName>Sdruzeni_obci</fullName>
    <active>true</active>
    <label>Sdružení obcí</label>
</RecordType>