objects/Account/recordTypes/Sdruzeni_pravnickych_osob.recordType-meta.xml
<RecordType>
    <fullName>Sdruzeni_pravnickych_osob</fullName>
    <active>true</active>
    <label>Sdružení právnických osob</label>
</RecordType>