objects/Account/recordTypes/Verejna_sprava.recordType-meta.xml
<RecordType>
    <fullName>Verejna_sprava</fullName>
    <active>true</active>
    <label>Veřejná správa</label>
</RecordType>