objects/Account/recordTypes/Vzdelavaci_instituce.recordType-meta.xml
<RecordType>
    <fullName>Vzdelavaci_instituce</fullName>
    <active>true</active>
    <label>Vzdělávací instituce</label>
</RecordType>