objects/Account/recordTypes/Zahranicni_prav_osoba.recordType-meta.xml
<RecordType>
    <fullName>Zahranicni_prav_osoba</fullName>
    <active>true</active>
    <label>Zahraniční práv. osoba</label>
</RecordType>