objects/Account/recordTypes/Zivnostnik.recordType-meta.xml
<RecordType>
    <fullName>Zivnostnik</fullName>
    <active>true</active>
    <label>Živnostník</label>
</RecordType>