objects/Account/validationRules/Typ_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Typ_required</fullName>
    <active>false</active>
    <errorConditionFormula>($RecordType.DeveloperName == &quot;Media&quot;) &amp;&amp; (TEXT(Typ_media__c) == &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Typ_media__c</errorDisplayField>
    <errorMessage>Typ média musí být určen.</errorMessage>
</ValidationRule>